# browser_to_dictonary

./: .gitignore  README.md
vocabulary-book/: background.ts  (+4 more)
vocabulary_book_backend/: pyproject.toml
vocabulary_book_backend/src/vocabulary_book_backend/: app.py  app_factory.py  commands.py  vb_app.py
vocabulary_book_backend/src/vocabulary_book_backend/configs/: __init__.py  app_config.py  app_config_factory.py
vocabulary_book_backend/src/vocabulary_book_backend/configs/deploy/: __init__.py
vocabulary_book_backend/src/vocabulary_book_backend/configs/middleware/: __init__.py  database_config.py  jwt_config.py  redis_config.py
vocabulary_book_backend/src/vocabulary_book_backend/configs/third/: __init__.py  sms_config.py
vocabulary_book_backend/src/vocabulary_book_backend/controllers/console/: __init__.py  views.py
vocabulary_book_backend/src/vocabulary_book_backend/extensions/: __init__.py  ext_blueprints.py  ext_commands.py  ext_database.py  ext_migrate.py  ext_redis.py
vocabulary_book_backend/src/vocabulary_book_backend/fields/: __init__.py  words_fields.py
vocabulary_book_backend/src/vocabulary_book_backend/libs/: __init__.py  constants.py  external_api.py
vocabulary_book_backend/src/vocabulary_book_backend/migrations/: env.py
vocabulary_book_backend/src/vocabulary_book_backend/models/: __init__.py  base.py  engine.py  user.py  word.py
vocabulary_book_backend/src/vocabulary_book_backend/services/: __init__.py  user_service.py  vocabulary_service.py  wechat_service.py
vocabulary_book_backend/tests/test_services/: __init__.py  test_word.py
(+15 files in other folders)
